[package]
name = "actix-stacoverflow"
version = "0.1.0"
authors = ["Arve Seljebu <arve.seljebu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "1.0", features = ["ssl"] }
futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
